[package]
name = "server-status"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
k8s-openapi = { version = "0.26.0", default-features = false, features = ["v1_30"] }
kube = { version = "2.0.1", features = ["runtime", "derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
